# laravel.pv122.com/app/Http/Controllers/API/CategoryController.php
@@ -36,15 +36,72 @@ class CategoryController extends Controller
         return response()->json($list);
     }
     /**
+     * @OA\Get(
+     *     tags={"Category"},
+     *     path="/api/category/select",
+     *   security={{ "bearerAuth": {} }},
+     *     @OA\Response(response="200", description="List Categories.")
+     * )
+     */
+    public function select()
+    {
+        $list = Category::all();
+        return response()->json($list,200);
+    }
+    function image_resize($width, $height, $path, $inputName)
+    {
+        list($w,$h)=getimagesize($_FILES[$inputName]['tmp_name']);
+        $maxSize=0;
+        if(($w>$h)and ($width>$height))
+            $maxSize=$width;
+        else
+            $maxSize=$height;
+        $width=$maxSize;
+        $height=$maxSize;
+        $ration_orig=$w/$h;
+        if(1>$ration_orig)
+            $width=ceil($height*$ration_orig);
+        else
+            $height=ceil($width/$ration_orig);
+        //отримуємо файл
+        $imgString=file_get_contents($_FILES[$inputName]['tmp_name']);
+        $image=imagecreatefromstring($imgString);
+        //нове зображення
+        $tmp=imagecreatetruecolor($width,$height);
+        imagecopyresampled($tmp, $image,
+            0,0,
+            0,0,
+            $width, $height,
+            $w, $h);
+        //Зберегти зображення у файлову систему
+        switch($_FILES[$inputName]['type'])
+        {
+            case 'image/jpeg':
+                imagejpeg($tmp,$path,30);
+                break;
+            case 'image/png':
+                imagepng($tmp,$path,0);
+                break;
+            case 'image/gif':
+                imagegif($tmp, $path);
+                break;
+        }
+        return $path;
+        //очисчаємо память
+        imagedestroy($image);
+        imagedestroy($tmp);
+    }
+
+    /**
      * @OA\Post(
      *     tags={"Category"},
      *     path="/api/category",
-     *     security={{ "bearerAuth": {} }},
+     *   security={{ "bearerAuth": {} }},
      *     @OA\RequestBody(
      *         @OA\MediaType(
      *             mediaType="multipart/form-data",
      *             @OA\Schema(
-     *                 required={"image", "name", "description"},
+     *                 required={"name"},
      *                 @OA\Property(
      *                     property="image",
      *                     type="string",
@@ -96,50 +153,6 @@ class CategoryController extends Controller
         return response()->json($category);
     }
 
-
-    function image_resize($width, $height, $path, $inputName)
-    {
-        list($w,$h)=getimagesize($_FILES[$inputName]['tmp_name']);
-        $maxSize=0;
-        if(($w>$h)and ($width>$height))
-            $maxSize=$width;
-        else
-            $maxSize=$height;
-        $width=$maxSize;
-        $height=$maxSize;
-        $ration_orig=$w/$h;
-        if(1>$ration_orig)
-            $width=ceil($height*$ration_orig);
-        else
-            $height=ceil($width/$ration_orig);
-        //отримуємо файл
-        $imgString=file_get_contents($_FILES[$inputName]['tmp_name']);
-        $image=imagecreatefromstring($imgString);
-        //нове зображення
-        $tmp=imagecreatetruecolor($width,$height);
-        imagecopyresampled($tmp, $image,
-            0,0,
-            0,0,
-            $width, $height,
-            $w, $h);
-        //Зберегти зображення у файлову систему
-        switch($_FILES[$inputName]['type'])
-        {
-            case 'image/jpeg':
-                imagejpeg($tmp,$path,30);
-                break;
-            case 'image/png':
-                imagepng($tmp,$path,0);
-                break;
-            case 'image/gif':
-                imagegif($tmp, $path);
-                break;
-        }
-        return $path;
-        //очисчаємо память
-        imagedestroy($image);
-        imagedestroy($tmp);
-    }
     /**
      * @OA\Post(
      *     tags={"Category"},
