# laravel.pv122.com/storage/api-docs/api-docs.json
@@ -51,9 +51,7 @@
                         "multipart/form-data": {
                             "schema": {
                                 "required": [
-                                    "image",
-                                    "name",
-                                    "description"
+                                    "name"
                                 ],
                                 "properties": {
                                     "image": {
@@ -75,6 +73,24 @@
                 "responses": {
                     "200": {
                         "description": "Add Category."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/category/select": {
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "operationId": "0b70904deeb472ca6a58642792785d6b",
+                "responses": {
+                    "200": {
+                        "description": "List Categories."
                     }
                 },
                 "security": [
